--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Receita</title>
+
+  <link rel="stylesheet" href="style.css">  
 </head>
 <body>
   <div id="page">
 
-    <img src="" alt=""/>
+    <img src="assets/main-image.jpg" alt="Imagem de um cupcake com graos de cafe e um chantily"/>
 
     <main>
       <section id="about">
@@ -46,7 +48,7 @@
           <br><br>
           Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.
         </p>
-        
+
       </section>
       <section id="ingredients"></section>
       <section id="preparation"></section>
