--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
   <link rel="stylesheet" href="style.css">  
 </head>
+
 <body>
+
   <div id="page">
 
     <img src="assets/main-image.jpg" alt="Imagem de um cupcake com graos de cafe e um chantily"/>
 
     <main>
+
       <section id="about">
         <h1>Cupcake de café com chantilly</h1>
         <p>O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou!
@@ -22,6 +25,10 @@
           Rendimento: 12 porções<br>
           Dificuldade: fácil
         </p>
+
+      </section>
+
+      <section id="ingredients">
 
         <h2>Ingredientes</h2>
 
@@ -39,6 +46,10 @@
             <li>2 colheres (sopa) de manteiga</li>
         </ul>
 
+      </section>
+
+      <section id="preparation">
+
         <h2>Modo de preparo</h2>
 
         <p>
@@ -50,10 +61,8 @@
         </p>
 
       </section>
-      <section id="ingredients"></section>
-      <section id="preparation"></section>
     </main>
-
   </div>
+  
 </body>
 </html>
