Trabalhando as fontes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="bt-br">
 <head>
+
+    <!--Iniciando fonte google Alice-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página de Receita</title>
 
-  <link rel="stylesheet" href="style.css">  
+  <!--Link do css na raiz do projeto-->
+  <link rel="stylesheet" href="style.css"> 
+  <!--Iniciando a fonte Alice--> 
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -63,6 +73,6 @@
       </section>
     </main>
   </div>
-  
+
 </body>
 </html>
