--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@
     </main>
   </div>
 
+<footer>
+  Feito com 
+  <img src="assets/ph_heart-fill.svg" alt="Coração no meio das palavras" />
+  pela Rocketseat
+</footer>
+
 </body>
 </html>
